--- a/test.html
+++ b/test.html
@@ -271,6 +271,19 @@ test("date", function() {
   ok(d.set({date: undefined}));
 });
 
+test("pattern /^test/", function() {
+var PatternTestModel = Backbone.Model.extend({
+    validate : {
+      name : {
+        format : /^test/
+      }
+    }
+  });
+  
+  var newTestModel = new PatternTestModel;
+  ok(newTestModel.set({name:"test"}));
+  equals(newTestModel.set({name:"broken"}), false);
+});
 
 });
 </script>
